[tool.poetry]
name = "fastapi-project1"
version = "0.1.0"
description = ""
authors = ["Felipe <tomazalvesfelipe@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_project1"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.93.0"
uvicorn = "^0.20.0"
aiohttp = "^3.8.4"
requests = "^2.28.2"
pydantic = "^1.10.5"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
